--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,8 +4,7 @@ on:
       - main
 run-name: Publish by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Publish
-env:
-  MIN_COVERAGE_PERCENT: .95
+
 jobs:
   publish-analysis:
     uses: ./.github/workflows/analysis.yml
@@ -29,7 +28,7 @@ jobs:
         target: [ dev, sit, uat, prod ]
     uses: ./.github/workflows/deployment.yml
     with:
-      target-environment: ${{ matrix.target }}
+      target-environment: .95
     needs:
       - release-tag
 
