--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
           echo "branches = ${{ steps.jacoco.outputs.branches }}"
 
       - name: Test the coverage condition
-        if: ${{steps.jacoco.outputs.coverage <= inputs.min-coverage-percent }}
+        if: ${{steps.jacoco.outputs.coverage < inputs.min-coverage-percent }}
         run: |
           echo "coverage checks not met"
           exit 1
