--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,7 @@ jobs:
 
   build-test:
     uses: ./.github/workflows/test.yml
+    env:
+      MIN_COVERAGE_PERCENT: .95
     with:
-      min-coverage-percent: ${{ env.MIN_COVERAGE_PERCENT }}
+      min-coverage-percent: "${{ env.MIN_COVERAGE_PERCENT }}"
