--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
   build-test:
     uses: ./.github/workflows/test.yml
     with:
-      min-coverage-percent: "${{ env.MIN_COVERAGE_PERCENT }}"
+      min-coverage-percent: "$MIN_COVERAGE_PERCENT"
