--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,14 @@ env:
 
 run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
 jobs:
+  log-env:
+    runs-on: ubuntu-latest
+    steps:
+      - name: step1
+        run: |
+          echo "min_coverage_percent = $MIN_COVERAGE_PERCENT"
+          echo "min_coverage_percent = ${{ MIN_COVERAGE_PERCENT }}"
+
   build-analysis:
     uses: ./.github/workflows/analysis.yml
     secrets: inherit
@@ -19,4 +27,4 @@ jobs:
   build-test:
     uses: ./.github/workflows/test.yml
     with:
-      min-coverage-percent: "$MIN_COVERAGE_PERCENT"
+      min-coverage-percent: .95
