--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,4 @@ jobs:
   build-test:
     uses: ./.github/workflows/test.yml
     with:
-      min-coverage-percent:  ${{ env.MIN_COVERAGE_PERCENT }}
+      min-coverage-percent:  ${{ github.MIN_COVERAGE_PERCENT }}
