--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,17 +7,9 @@ on:
       - opened
       - reopened
       - synchronize
-env:
-  MIN_COVERAGE_PERCENT: .95
 
 run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
 jobs:
-  log-env:
-    runs-on: ubuntu-latest
-    steps:
-      - name: step1
-        run: echo "min_coverage_percent = ${{ env.MIN_COVERAGE_PERCENT }}"
-
   build-analysis:
     uses: ./.github/workflows/analysis.yml
     secrets: inherit
@@ -25,4 +17,5 @@ jobs:
   build-test:
     uses: ./.github/workflows/test.yml
     with:
-      min-coverage-percent:  ${{ github.MIN_COVERAGE_PERCENT }}
+      min-coverage-percent: .95
+    needs: build-analysis
