--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,6 +4,7 @@ on:
       - main
 run-name: Publish by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Publish
+
 jobs:
   publish-analysis:
     uses: ./.github/workflows/analysis.yml
@@ -11,6 +12,8 @@ jobs:
 
   publish-test:
     uses: ./.github/workflows/test.yml
+    with:
+      min-coverage-percent: ${{ env.MIN_COVERAGE_PERCENT }}
     needs:
       - publish-analysis
 
@@ -25,7 +28,7 @@ jobs:
         target: [ dev, sit, uat, prod ]
     uses: ./.github/workflows/deployment.yml
     with:
-      target-environment: ${{ matrix.target }}
+      target-environment: .95
     needs:
       - release-tag
 
