--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.2</version>
+		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.initgrep.cr</groupId>
@@ -88,13 +88,6 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.7</version>
-
-				<configuration>
-					<excludes>
-						<exclude>com/initgrep/cr/msauth/MsAuthApplication.class</exclude>
-					</excludes>
-				</configuration>
-
 				<executions>
 					<execution>
 						<goals>
@@ -107,6 +100,14 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+						<configuration>
+							<excludes>
+								<exclude>**/*Config.*</exclude>
+								<exclude>**/dto/*.*</exclude>
+								<exclude>**/entity/**</exclude>
+								<exclude>**/MsAuthApplication.class</exclude>
+							</excludes>
+						</configuration>
 					</execution>
 					<execution>
 						<id>default-check</id>
@@ -115,6 +116,12 @@
 							<goal>check</goal>
 						</goals>
 						<configuration>
+							<excludes>
+								<exclude>**/*Config.*</exclude>
+								<exclude>**/dto/*.*</exclude>
+								<exclude>**/entity/**</exclude>
+								<exclude>**/MsAuthApplication.class</exclude>
+							</excludes>
 							<rules>
 								<rule>
 									<element>BUNDLE</element>
@@ -122,7 +129,7 @@
 										<limit>
 											<counter>COMPLEXITY</counter>
 											<value>COVEREDRATIO</value>
-											<minimum>0</minimum>
+											<minimum>.95</minimum>
 										</limit>
 									</limits>
 								</rule>
