--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -36,15 +36,15 @@ log4j:
 
 
 #application variables
-app:
-  key-pair:
-    directory: token-keys
-  access-token:
-    public-key-path: ${ACCESS_TOKEN_PUBLIC_KEY_PATH}
-    private-key-path: ${ACCESS_TOKEN_PRIVATE_KEY_PATH}
-    expiry-duration-min: ${APP_ACCESS_TOKEN_EXPIRY_DURATION_MIN}
-  refresh-token:
-    public-key-path: ${REFRESH_TOKEN_PUBLIC_KEY_PATH}
-    private-key-path: ${REFRESH_TOKEN_PRIVATE_KEY_PATH}
-    expiry-duration-days: ${APP_REFRESH_TOKEN_EXPIRY_DURATION_DAYS}
-    min-renewal-days: ${APP_REFRESH_TOKEN_MIN_RENEWAL_DAYS}
+#app:
+#  key-pair:
+#    directory: token-keys
+#  access-token:
+#    public-key-path: ${ACCESS_TOKEN_PUBLIC_KEY_PATH}
+#    private-key-path: ${ACCESS_TOKEN_PRIVATE_KEY_PATH}
+#    expiry-duration-min: ${APP_ACCESS_TOKEN_EXPIRY_DURATION_MIN}
+#  refresh-token:
+#    public-key-path: ${REFRESH_TOKEN_PUBLIC_KEY_PATH}
+#    private-key-path: ${REFRESH_TOKEN_PRIVATE_KEY_PATH}
+#    expiry-duration-days: ${APP_REFRESH_TOKEN_EXPIRY_DURATION_DAYS}
+#    min-renewal-days: ${APP_REFRESH_TOKEN_MIN_RENEWAL_DAYS}
